--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ WSClient.prototype.onMessage = function(message) {
 };
 
 WSClient.prototype.displayError = function(err) {
+    this.connected = false;
     console.log('Websocketerror: ' + err);
 };
 //----------------- network finish ------------------
@@ -102,6 +103,7 @@ function main() {
 //----------------- callbacks start ------------------
 function cb_init(data) {
     var random_seed = data["random_seed"];
+    console.log(data);
     srandom(random_seed);
     game = new Phaser.Game(WORLD_WIDTH, WORLD_HEIGHT, Phaser.AUTO, '', { preload: preload, create: create, update: update });
 }
@@ -232,7 +234,11 @@ function update_controls () {
 function update () {
     update_physics();
     update_controls();
-    textConnStatus.text = 'connected';
+    if(wsClient.connected) {
+        textConnStatus.text = 'connected';
+    } else {
+        textConnStatus.text = 'disconnected';
+    }
 }
 //----------------- update finish ------------------
 
