--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@ function update_controls () {
     } else {
         players[playerId].animations.stop();
         players[playerId].frame = 4;
+        wsSyncPosition();
     }
 
     if (cursors.up.isDown && players[playerId].body.touching.down) {
