--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@ var PLAYER_WIDTH = 32;
 var PLAYER_HEIGHT = 48;
 var STAR_WIDTH = 24;
 var STAR_HEIGHT = 22;
-var STAR_COUNT = 12;
 
 var gameServerAddr = "ws://127.0.0.1:12626";
 var game;
@@ -93,7 +92,9 @@ var score = 0;
 var textScore;
 var textConnStatus;
 var playerId = 0;
+var room;
 var roomId;
+var monsters;
 
 var wsClient = new WSClient();
 
@@ -102,15 +103,14 @@ function main() {
 }
 //----------------- global finish ------------------
 
-
-
 //----------------- callbacks start ------------------
 function cb_init(data) {
     playerId = data.yourRoleId;
-    roomId = data.roomId;
-    playerIds.push(data.playerOneId);
-    playerIds.push(data.playerTwoId);
-    srandom(data.randomSeed);
+    room = data.room;
+    roomId = room.roomId;
+    srandom(room.randomSeed);
+    playerIds.push(room.playerOneId);
+    playerIds.push(room.playerTwoId);
     game = new Phaser.Game(WORLD_WIDTH, WORLD_HEIGHT, Phaser.AUTO, '', { preload: preload, create: create, update: update });
     game.stage.disablePauseScreen = true;
 }
@@ -183,16 +183,16 @@ function create_players() {
     }
 }
 
-function create_stars() {
-    stars = game.add.group();
-    stars.enableBody = true;
+function create_monsters() {
+    monsters = game.add.group();
+    monsters.enableBody = true;
 
-    for (var i = 0; i < STAR_COUNT; i++) {
-        var star = stars.create(
-            i * WORLD_WIDTH / STAR_COUNT + WORLD_WIDTH / STAR_COUNT / 2 - STAR_WIDTH / 2
+    for (var i = 0; i < room.monsters.length; i++) {
+        var monster = monsters.create(
+            i * WORLD_WIDTH / room.monsters.length + WORLD_WIDTH / room.monsters.length / 2 - STAR_WIDTH / 2
             , 0, 'star');
-        star.body.gravity.y = 500;
-        star.body.bounce.y = 0.7 + random() * 0.2;
+        monster.body.gravity.y = 500;
+        monster.body.bounce.y = 0.7 + random() * 0.2;
     }
 }
 
@@ -205,7 +205,7 @@ function create () {
     game.physics.startSystem(Phaser.Physics.ARCADE);
     create_background();
     create_players();
-    create_stars();
+    create_monsters();
     create_texts();
 }
 //----------------- create finish ------------------
@@ -220,12 +220,12 @@ function updateEatStar (player, star) {
 }
 
 function update_physics () {
-    game.physics.arcade.collide(stars, platforms);
+    game.physics.arcade.collide(monsters, platforms);
     for(var i=0;i<playerIds.length;i++) {
         var index = playerIds[i];
         players[index].body.velocity.x = 0;
         game.physics.arcade.collide(players[index], platforms);
-        game.physics.arcade.overlap(players[index], stars, updateEatStar, null, this);
+        game.physics.arcade.overlap(players[index], monsters, updateEatStar, null, this);
         if(i < playerIds.length - 1 ) {
             game.physics.arcade.collide(players[index], players[playerIds[i+1]]);
         }
